--- a/app/views/email_mailer/registration_confirmation.html.erb
+++ b/app/views/email_mailer/registration_confirmation.html.erb
@@ -4,7 +4,7 @@
   <title>Registration Confirmation</title>
 </head>
 <body>
-  <h1>Welcome to our application, <%= @user.username %>!</h1>
+  <h1>Welcome to our application, <%= @player_profile.username %>!</h1>
   <p>Your registration was successful. Thank you for joining us.</p>
 </body>
 </html>
